# Fine-tune-LegalVN

./: .gitignore  README.md  README_STREAMLIT.md  app.py  app_simple.py  pyproject.toml
data/json/: legal_qa_thue-phi-le-phi_20250903_223353.json  legal_qa_thue-phi-le-phi_urls.json
data/tables/thue-phi-le-phi/: answer_contexts.csv  answers.csv  contexts.csv  questions.csv
notebooks/: data-prepare.ipynb  doc.md  index_database.ipynb  langgraph_app.ipynb  llamaindex_evaluation_rag.ipynb  qa_generation.ipynb
scripts/: README_crawler.md  get_legal_qa_urls.py  json_to_tables.py  json_to_tables_v2.py  legal_qa_crawler.py  legal_qa_crawler_v3.py  test_sql_query.py  text_extract.py
test/: README.md  __init__.py  get_legal_qa_urls.py  hf-legal-dataset.py  json_to_csv.py  json_to_csv_v2.py  legal_qa_crawler.py  legal_qa_crawler_v2.py  legal_qa_crawler_v3.py  storage-data.py  test_fixtures.py  test_get_legal_qa_urls.py  test_json_to_tables.py  test_legal_qa_crawler.py  test_runner.py  zalo-alqac-dataset.py
