[project]
name = "fine-tune-legalvn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "fastembed>=0.7.3",
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.6",
    "pandas>=2.3.2",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
    "llama-index-core>=0.13.4",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
    "scrapy>=2.13.3",
    # Streamlit App Dependencies
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]
